<resources>
    <string name="app_name">Intro Application</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="cancel">Cancel</string>
    <string name="your_profile">Your Profile</string>
</resources>
