<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtName"
        android:hint="@string/username"
        android:layout_marginStart="@dimen/marginLength"
        android:layout_marginEnd="@dimen/marginLength"
        android:layout_marginTop="@dimen/marginLength"
        android:autofillHints=""
        android:inputType="textPersonName" />

    <EditText
        android:layout_below="@id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtPassword"
        android:hint="@string/password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <TableRow
        android:id="@+id/btnRow"
        android:layout_below="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size1"
            android:text="@string/login"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorBlue" />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLength"
            android:textSize="@dimen/size1"
            android:text="@string/register"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorBlue"/>
    </TableRow>
    <CheckBox
        android:layout_below="@id/btnRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/keep_me_signed_in" />

</RelativeLayout>